Updated v2 API spec
Adds the number of pages to the pagination info in the response.
Converts all query parameters to camelCase from kebab-case; this means
less headaches with auto-generated code that converts parameter names
between these formats.
